--- a/README.qmd
+++ b/README.qmd
@@ -11,6 +11,12 @@ hide:
 When documenting your functions, you might find yourself documenting the same parameters over and over again.
 DocStrands provides a framework for re-using docstring information.
 
+## Installation
+
+```bash
+pip install docstrands
+```
+
 ## Example
 
 Imagine you're writing an HTTP library.
